--- a/index.html
+++ b/index.html
@@ -1,366 +1,67 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8" />
-		<title>project1</title>
-		<link rel="stylesheet" href="css/swiper-3.3.1.min.css" />
-		<link rel="stylesheet" href="css/reset.css" />
-		<link rel="stylesheet" href="css/nav-footer.css" />
-		<link rel="stylesheet" href="css/main-drive.css" />
-		<link rel="stylesheet" href="css/main.css" />
-		<link rel="stylesheet" href="css/respons.css" />
-		<link rel="stylesheet" href="css/workthink.css" />
-		<link rel="stylesheet" href="css/abstract.css" />
-		<link rel="stylesheet" href="css/style.css" />
-	</head>
-	<body>
-		<!--nav-start-->
-		<div class="nav">
-			<div class="nav-box">
-				<div class="nb-header">
-					<a href="index.html"></a>
-				</div>
-				<ul class="nb-right">
-					<li style="border-top: 3px solid #2BABCF;">
-						<a href="index.html" style="color: #2BABCF;">
-							主页
-						</a>
-					</li>
-					<li class="down">
-						<a href="javascript:void(0)" onclick="hf()">
-							移动互联网
-						</a>
-						<ul class="down-list" id="down-list">
-							<li class="d-l-ex">
-								<a href="mobilemark.html">定制化商城</a>
-							</li>
-							<li class="d-l-ex">
-								<a href="o2o.html">O2O电商</a>
-							</li>
-							<li class="d-l-ex">
-								<a href="oracle.html">Oracle咨询</a>
-							</li>
-						</ul>
-					</li>
-					<li>
-						<a href="work.html">
-							工作理念
-						</a>
-					</li>
-					<li>
-						<a href="network.html">
-							互联网战略
-						</a>
-					</li>
-					<li>
-						<a href="about.html">
-							关于我们
-						</a>
-					</li>
-				</ul>
-			</div>
-		</div>
-		<!--nav-end-->
-		<div class="banner">
-			<div class="swiper-container containerWrap">
-			    <div class="swiper-wrapper">
-			        <div class="swiper-slide">
-			        	<img class="slide-img" src="img/slide01.jpg" />
-			        </div>
-			        <div class="swiper-slide">
-			        	<img class="slide-img" src="img/slide02.jpg" />
-			        </div>
-			        <div class="swiper-slide">
-			        	<img class="slide-img" src="img/slide03.jpg" />
-			        </div>			        
-			    </div>
-			    <div class="swiper-button-prev" id="btnPre"></div>
-    			<div class="swiper-button-next" id="btnNext"></div>
-			</div>
-			<div class="drive-ex">
-				<div>
-					<h2>为客户提供 最具价值 的服务是我们的承诺</h2>
-				</div>
-			</div>
-			<div class="dex-shadow">
-				<img src="img/divider-shadow1.png" />
-			</div>
-			<div class="main">
-				<div class="main-ex">
-					<div class="mex-1">
-						<h2>我们的项目</h2>
-					</div>
-					<div class="mex-2">
-						<div>
-							<span>
-								<i class="icon-1"></i>
-							</span>
-							<h4>
-								移动化应用
-							</h4>
-							<p>
-								单纯用PC来使用ERP的时代将一去不复返移动端应用将为企业信息化带来巨大变革
-							</p>
-						</div>
-						<div>
-							<span>
-								<i class="icon-2"></i>
-							</span>
-							<h4>
-								定制化商城
-							</h4>
-							<p>
-								定制化服务是一种高水平的劳动它需要有更高的素质，更丰富的专业知识
-							</p>
-						</div>
-						<div>
-							<span>
-								<i class="icon-3"></i>
-							</span>
-							<h4>
-								O2O移动电商
-							</h4>
-							<p>
-								对经销商传统营销推广模式存在的痛点问题，构建O2O移动电子商务平台。
-							</p>
-						</div>
-						<div>
-							<span>
-								<i class="icon-4"></i>
-							</span>
-							<h4>
-								Oracle咨询
-							</h4>
-							<p>
-								Oracle系统，即是以Oracle关系数据库为数据存储和管理作为构架基础。
-							</p>
-						</div>
-						<div>
-							<span>
-								<i class="icon-5"></i>
-							</span>
-							<h4>
-								微信化服务
-							</h4>
-							<p>
-								提升业绩，使用微信应用，企业可以与所有客户保持紧密相连，维系信任、忠诚的关系。
-							</p>
-						</div>
-					</div>
-				</div>
-				<div class="respons">
-					<div class="respons-left">
-						<h2>解决方案</h2>
-						<p>为满足各类企业用户对Oracle技术人才的需求，推动企业信息化建设，帮助企业解决实际问题，我们为企业用户提供面授及客户包班等Oracle技术培训方案</p>
-						<ul>
-							<li>
-								<span onclick="shceme1f()">移动化应用</span>
-							</li>
-							<li>
-								<span onclick="shceme2f()">定制化商城</span>
-							</li>
-							<li>
-								<span onclick="shceme4f()">Oracle咨询</span>
-							</li>
-							<li>
-								<span onclick="shceme5f()">O2O移动</span>
-							</li>
-							<li>
-								<span onclick="shceme6f()">微信化服务</span>
-							</li>
-						</ul>
-					</div>
-					<div class="respons-right">
-						<img id="scheme1" src="img/scheme1.png" />
-						<img id="scheme2" style="display: none;" src="img/scheme2.png" />
-						<img id="scheme4" style="display: none;" src="img/scheme4.png"/>
-						<img id="scheme5" style="display: none;" src="img/scheme5.png"/>
-						<img id="scheme6" style="display: none;" src="img/scheme6.png"/>
-					</div>
-				</div>
-				<div class="workthink">
-					<div class="workthink-1">
-						<h2>工作理念</h2>
-					</div>
-					<div class="workthink-2">
-						<div class="box">
-							<div class="box-img">
-								<img src="img/work1.png" />
-							</div>
-							<div class="box-p">
-								<p>平等机会</p>
-								<p>宽容、和谐、文雅、仁和</p>
-								<p>为每个人提供均等的机会</p>
-							</div>
-						</div>
-						<div class="box">
-							<div class="box-img">
-								<img src="img/work2.png" />
-							</div>
-							<div class="box-p">
-								<p>高效同步</p>
-								<p>诚相待，晓之以理</p>
-								<p>品牌与品质同步</p>
-							</div>
-						</div>
-						<div class="box">
-							<div class="box-img">
-								<img src="img/work3.png" />
-							</div>
-							<div class="box-p">
-								<p>空间无限</p>
-								<p>人才与事业共长</p>
-								<p>精神与物质并重</p>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="abstract">
-					<div class="abstract-box">
-						<div class="abstract-img">
-							<img src="img/about-intro.png" />
-						</div>
-						<div class="abstract-p">
-							<h2>深圳昊特信息技术有限公司</h2>
-							<p>
-								专注于移动互联网，总部设在广州。主要业务范畴移动APP产品开发、移动应用产品开发、移动电子商务平台、微信类应用、O2O电子商务平台等。致力于为客户提供卓越的商业移动化解决方案、企业移动应用、精准移动营销广告及运营服务。
-							</p>
-							<p>
-								拥有一批经验丰富，行业领军的高水平专业顾问，专注于移动互联网和企业移动应用，拥有多年企业电子商务建设实施与移动互联网增值开发经验，我们努力把客户的后台顾好，令客户可以牛轰轰！
-							</p>
-							<a href="about.html">
-								查看更多
-							</a>
-						</div>
-					</div>
-					<div class="customer">
-						<div class="customer-box">
-							<div class="customer-title">
-								<h2>我们的客户</h2>
-							</div>
-							<div class="customer-ex">
-								<div>
-									<span>
-										<img src="img/opper_logo1.png" />
-									</span>
-									<span>
-										<img src="img/opper_logo2.png" />
-									</span>
-									<span>
-										<img src="img/opper_logo3.png" />
-									</span>
-									<span>
-										<img src="img/opper_logo4.png" />
-									</span>
-									<span>
-										<img src="img/opper_logo5.png" />
-									</span>
-									<span>
-										<img src="img/opper_logo6.png" />
-									</span>
-									<span>
-										<img src="img/opper_logo7.png" />
-									</span>
-									<span>
-										<img src="img/opper_logo8.png" />
-									</span>
-									<span>
-										<img src="img/opper_logo9.png" />
-									</span>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<footer class="footer">
-				<div class="footer-box">
-					<div class="footer-1">
-						<h4>理念</h4>
-						<div>
-							<a>
-								<img src="img/work1.png" />
-							</a>
-							<a>
-								<img src="img/work2.png" />
-							</a>
-							<a>
-								<img src="img/work3.png" />
-							</a>
-						</div>
-					</div>
-					<div class="footer-2">
-						<h4>业务范畴</h4>
-						<p>
-							移动APP产品开发、移动应用产品开发、移动电子商务平台、微信类应用、O2O电子商务平台等	
-						</p>
-					</div>
-					<div class="footer-3">
-						<h4>联系我们</h4>
-						<p>
-	             			 深圳昊特信息技术有限公司
-	              			<br />
-	              			广州市海珠区琶洲大道东一号保利国际广场南塔29楼
-				  			<br />
-	             			 电话 ： <br />
-	    	  				Copyright © 深圳昊特信息技术有限公司
-						</p>		
-					</div>
-				</div>
-			</footer>
-		<script type="text/javascript" src="js/swiper-3.3.1.min.js" ></script>
-		<script type="text/javascript" src="js/down-list.js" ></script>
-		<script type="text/javascript">
-			var scheme1 = document.getElementById("scheme1");
-			var scheme2 = document.getElementById("scheme2");
-			var scheme4 = document.getElementById("scheme4");
-			var scheme5 = document.getElementById("scheme5");
-			var scheme6 = document.getElementById("scheme6");
-			function hiddenAll() {
-				scheme1.style.display = "none";
-				scheme2.style.display = "none";
-				scheme4.style.display = "none";
-				scheme5.style.display = "none";
-				scheme6.style.display = "none";
-			}
-			function shceme1f() {
-				hiddenAll()
-				scheme1.style.display = "block";
-			}
-			function shceme2f() {
-				hiddenAll()
-				scheme2.style.display = "block";
-			}
-			function shceme4f() {
-				hiddenAll()
-				scheme4.style.display = "block";
-			}
-			function shceme5f() {
-				hiddenAll()
-				scheme5.style.display = "block";
-			}
-			function shceme6f() {
-				hiddenAll()
-				scheme6.style.display = "block";
-			}
-		</script>
-		<script>
-		var btnPre = document.getElementById("btnPre");		
-		var btnNext = document.getElementById("btnNext");
 
-			var mySwiper = new Swiper ('.swiper-container', {
-			    direction: 'horizontal',
-			    loop: true,
-			    speed:50
-			    speed:50
-			 });    
-			 btnPre.onclick = function(){
-				mySwiper.slidePrev();
-			}
-			btnNext.onclick = function(){
-				mySwiper.slideNext();
-			}
-		</script>
-	</body>
+  <head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="description" content="Zxa123456.GitHub.com : ">
+
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>Zxa123456.GitHub.com</title>
+  </head>
+
+  <body>
+
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/ZXA123456">View on GitHub</a>
+
+          <h1 id="project_title">Zxa123456.GitHub.com</h1>
+          <h2 id="project_tagline"></h2>
+
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+
+<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+
+<h3>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+
+<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+
+<h3>
+<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+
+<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+
+<h3>
+<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+
+<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+
+<h3>
+<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+
+<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+      </section>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
+    
+
+  </body>
 </html>
