Signed-off-by: ZXA123456 <1024733434@qq.com>

--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
 								<a href="o2o.html">O2O电商</a>
 							</li>
 							<li class="d-l-ex">
-								<a href="oracle.html">Oracle咨询</a>
+								<a href="dis.html">家具设计咨询</a>
 							</li>
 						</ul>
 					</li>
@@ -85,28 +85,28 @@
 					<h2 id="m-r-1">关于我们</h2>
 					<div class="m-r-box1">
 						<div class="r-b-img1">
-							<img src="img/about-intro.png" />
+							<img src="img/about-intro.jpg" />
 						</div>
 						<div class="r-b-p1">
-							<h3>深圳昊特信息技术有限公司</h3>
+							<h3>XXXX有限公司</h3>
 							<p>
-								专注于移动互联网，总部设在广州。主要业务范畴移动APP产品开发、移动应用产品开发、移动电子商务平台、微信类应用、O2O电子商务平台等。致力于为客户提供卓越的商业移动化解决方案、企业移动应用、精准移动营销广告及运营服务。
+								专注于移动互联网与实际店面的联系，主要业务范畴家具的销售、家具的保养、家具的定制化设计、家具的设计咨询、网络方面家具销售服务等。致力于为客户提供卓越的家具方面的相关服务。
 							</p>
 							<p>
-								拥有一批经验丰富，行业领军的高水平专业顾问，专注于移动互联网和企业移动应用，拥有多年企业电子商务建设实施与移动互联网增值开发经验，我们努力把客户的后台顾好，令客户可以牛轰轰！
+								拥有一批经验丰富的家具设计师、家具保养师，充足的物流团队，优质的货源，保证你家具买的放心用的放心。
 							</p>
 						</div>
 					</div>
 					<h2 id="m-r-2">联系我们</h2>
 					<div class="m-r-box2">
 						<div class="r-b-img2">
-							<img src="img/companyAddress.png" />
+							<img src="img/companyAddress.png" alt="公司所在地点" />
 						</div>
 						<div class="r-b-p2">
-						            地址：广州市海珠区琶洲大道东1号保利国际广场南塔2907-2908号<br/>
-						            电话：<br/>
-						            传真：<br/>
-						            邮箱：service@hotteck.com<br/>
+						            地址：XX市XX区XXXXX<br/>
+						            电话：XXXXXXXXX<br/>
+						            传真：XXXXXXX<br/>
+						            邮箱：XXXXX@XXXX.com<br/>
 						</div>
 					</div>
 					<h2 id="m-r-3">加入我们</h2>
@@ -144,18 +144,18 @@
 					<div class="footer-2">
 						<h4>业务范畴</h4>
 						<p>
-							移动APP产品开发、移动应用产品开发、移动电子商务平台、微信类应用、O2O电子商务平台等	
+							家具的销售、家具的保养、家具的定制化设计、家具的设计咨询、网络方面家具销售服务等	
 						</p>
 					</div>
 					<div class="footer-3">
 						<h4>联系我们</h4>
 						<p>
-	             			 深圳昊特信息技术有限公司
+	             			XXXX有限公司
 	              			<br />
-	              			广州市海珠区琶洲大道东一号保利国际广场南塔29楼
+	              			XX市XX区XXXXX
 				  			<br />
-	             			 电话 ： <br />
-	    	  				Copyright © 深圳昊特信息技术有限公司
+	             			  电话 ： XXXXXXXX<br />
+	    	  				Copyright © XXXX有限公司
 						</p>		
 					</div>
 				</div>
