--- a/dis.html
+++ b/dis.html
@@ -2,12 +2,13 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>O2O电商</title>
+		<title>家具设计咨询</title>
 		<link rel="stylesheet" href="css/reset.css" />
 		<link rel="stylesheet" href="css/nav-footer.css" />
 		<link rel="stylesheet" href="css/style.css" />
 		<link rel="stylesheet" href="css/about.css" />
-		<link rel="stylesheet" href="css/o2o.css" />
+		<link rel="stylesheet" href="css/work.css" />
+		<link rel="stylesheet" href="css/mobilemark.css" />
 		<script type="text/javascript" src="js/down-list.js" ></script>
 	</head>
 	<body>
@@ -34,7 +35,7 @@
 								<a href="o2o.html">O2O电商</a>
 							</li>
 							<li class="d-l-ex">
-								<a href="dis.html">家具设计咨询</a>
+								<a href="oracle.html">家具设计咨询</a>
 							</li>
 						</ul>
 					</li>
@@ -65,47 +66,33 @@
 							<a href="index.html">主页</a>
 						</li>
 						<li>
-							/&nbsp;O2O电商
+							/Oracle咨询
 						</li>
 					</ul>
 				</div>
 			</div>
-			<div class="o2o">
-				<div class="o2o-left1">
-					<img src="img/O2O1.jpg" />
+			<div class="mo-bi-main">
+				<div class="mo-bi-box1">
+					<div class="bi-b-img1">
+						<img src="img/bg1.png" />
+					</div>
+					<div class="bi-b-p1">
+						<h2>家具设计咨询的出现</h2>
+						<p>
+							鉴于现在的年轻人越来越多，他们对于现在传统模式的家具已经不太喜欢，他们对于新的，符合个性的家具有着强烈的兴趣与想法，因此家具设计咨询应运而生。
+						</p>
+					</div>
 				</div>
-				<div class="o2o-right1">
-					<h3>商户和消费者之间的最优化对接，社交化分享形成口碑传播。</h3>
-				</div>
-			</div>
-			<div class="o2o">
-				<div class="o2o-left">
-					<h3>线上线下，门店轻松管</h3>
-					<p>
-						门店应用通过线上线下销售纵横布局，可使线上用户通过微信或APP获取优惠信息而到门店下单，从而转为线下客户，或是门店客户通过扫描支付码或小票二维码等形式转为线上会员，从而实现真正意义上的线上线下互通的O2O模式。
-					</p>
-				</div>
-				<div class="o2o-right">
-					<img src="img/O2O2.jpg" />
-				</div>
-			</div>
-			<div class="o2o">
-				<div class="o2o-left1">
-					<img src="img/O2O3.jpg" />
-				</div>
-				<div class="o2o-right1">
-					<h3>核心价值</h3>
-					<p>
-						多方式及渠道接触新客户，利用O2O平台，有效节约运营、推广和流程带来的成本浪费。
-					</p>
-				</div>
-			</div>
-			<div class="o2o">
-				<div class="o2o-left">
-					<h3>客户与商户发生一次线下交易后，便可为客户生成相应会员卡，从而可以对客户进行持续关注，以获得长期收益。</h3>
-				</div>
-				<div class="o2o-right">
-					<img src="img/O2O4.jpg" />
+				<div class="mo-bi-box2">
+					<div class="bi-b-p2">
+						<h2>家具设计咨询的市场需求</h2>
+						<p>
+							家具设计咨询的市场需求大部分来自于新一代的年轻人和一些家具搭配的设计师，如何在有效的空间利用家具创造更多的空间，这使得家具设计咨询变得越来越重要。
+						</p>
+					</div>
+					<div class="bi-b-img2">
+						<img src="img/bg2.png" />
+					</div>
 				</div>
 			</div>
 		</div>
