--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>project1</title>
+		<title>首页</title>
 		<link rel="stylesheet" href="css/swiper-3.3.1.min.css" />
 		<link rel="stylesheet" href="css/reset.css" />
 		<link rel="stylesheet" href="css/nav-footer.css" />
@@ -39,7 +39,7 @@
 								<a href="o2o.html">O2O电商</a>
 							</li>
 							<li class="d-l-ex">
-								<a href="oracle.html">Oracle咨询</a>
+								<a href="dis.html">家具设计咨询</a>
 							</li>
 						</ul>
 					</li>
@@ -97,10 +97,10 @@
 								<i class="icon-1"></i>
 							</span>
 							<h4>
-								移动化应用
+								家具的保养
 							</h4>
 							<p>
-								单纯用PC来使用ERP的时代将一去不复返移动端应用将为企业信息化带来巨大变革
+								由于不恰当的保养导致家具的损坏时有发生，我们特别推出家具保养服务
 							</p>
 						</div>
 						<div>
@@ -122,7 +122,7 @@
 								O2O移动电商
 							</h4>
 							<p>
-								对经销商传统营销推广模式存在的痛点问题，构建O2O移动电子商务平台。
+								改变传统的只能到店里面购物的情况，以此来扩大客户范围，增强竞争力
 							</p>
 						</div>
 						<div>
@@ -130,10 +130,10 @@
 								<i class="icon-4"></i>
 							</span>
 							<h4>
-								Oracle咨询
+								家具设计咨询
 							</h4>
 							<p>
-								Oracle系统，即是以Oracle关系数据库为数据存储和管理作为构架基础。
+								鉴于单纯的样品家具无法满足人们的需要，我们为此特定开设家具的设计来满足人们对于家具的要求
 							</p>
 						</div>
 						<div>
@@ -144,27 +144,27 @@
 								微信化服务
 							</h4>
 							<p>
-								提升业绩，使用微信应用，企业可以与所有客户保持紧密相连，维系信任、忠诚的关系。
+								提升业绩，使用微信应用，企业可以与所有客户保持紧密相连的关系。
 							</p>
 						</div>
 					</div>
 				</div>
 				<div class="respons">
 					<div class="respons-left">
-						<h2>解决方案</h2>
-						<p>为满足各类企业用户对Oracle技术人才的需求，推动企业信息化建设，帮助企业解决实际问题，我们为企业用户提供面授及客户包班等Oracle技术培训方案</p>
+						<h2>特色服务</h2>
+						<p>为满足用户对家具的保养，设计，购买等各方面的需求，我们特别准备了一下服务</p>
 						<ul>
 							<li>
-								<span onclick="shceme1f()">移动化应用</span>
+								<span onclick="shceme1f()">家具的保养</span>
 							</li>
 							<li>
 								<span onclick="shceme2f()">定制化商城</span>
 							</li>
 							<li>
-								<span onclick="shceme4f()">Oracle咨询</span>
+								<span onclick="shceme4f()">O2O移动电商</span>
 							</li>
 							<li>
-								<span onclick="shceme5f()">O2O移动</span>
+								<span onclick="shceme5f()">家具设计咨询</span>
 							</li>
 							<li>
 								<span onclick="shceme6f()">微信化服务</span>
@@ -172,16 +172,16 @@
 						</ul>
 					</div>
 					<div class="respons-right">
-						<img id="scheme1" src="img/scheme1.png" />
-						<img id="scheme2" style="display: none;" src="img/scheme2.png" />
-						<img id="scheme4" style="display: none;" src="img/scheme4.png"/>
-						<img id="scheme5" style="display: none;" src="img/scheme5.png"/>
-						<img id="scheme6" style="display: none;" src="img/scheme6.png"/>
+						<img id="scheme1" src="img/scheme1.jpg" />
+						<img id="scheme2" style="display: none;" src="img/scheme2.jpg" />
+						<img id="scheme4" style="display: none;" src="img/scheme3.jpg"/>
+						<img id="scheme5" style="display: none;" src="img/scheme4.jpg"/>
+						<img id="scheme6" style="display: none;" src="img/scheme5.jpg"/>
 					</div>
 				</div>
 				<div class="workthink">
 					<div class="workthink-1">
-						<h2>工作理念</h2>
+						<h2>我们的工作理念</h2>
 					</div>
 					<div class="workthink-2">
 						<div class="box">
@@ -219,15 +219,15 @@
 				<div class="abstract">
 					<div class="abstract-box">
 						<div class="abstract-img">
-							<img src="img/about-intro.png" />
+							<img src="img/about-intro.jpg" />
 						</div>
 						<div class="abstract-p">
-							<h2>深圳昊特信息技术有限公司</h2>
+							<h2>XXXX有限公司</h2>
 							<p>
-								专注于移动互联网，总部设在广州。主要业务范畴移动APP产品开发、移动应用产品开发、移动电子商务平台、微信类应用、O2O电子商务平台等。致力于为客户提供卓越的商业移动化解决方案、企业移动应用、精准移动营销广告及运营服务。
+								专注于移动互联网与实际店面的联系，主要业务范畴家具的销售、家具的保养、家具的定制化设计、家具的设计咨询、网络方面家具销售服务等。致力于为客户提供卓越的家具方面的相关服务。
 							</p>
 							<p>
-								拥有一批经验丰富，行业领军的高水平专业顾问，专注于移动互联网和企业移动应用，拥有多年企业电子商务建设实施与移动互联网增值开发经验，我们努力把客户的后台顾好，令客户可以牛轰轰！
+								拥有一批经验丰富的家具设计师、家具保养师，充足的物流团队，优质的货源，保证你家具买的放心用的放心。
 							</p>
 							<a href="about.html">
 								查看更多
@@ -242,31 +242,31 @@
 							<div class="customer-ex">
 								<div>
 									<span>
-										<img src="img/opper_logo1.png" />
+										<img src="img/opper_logo1.jpg" />
 									</span>
 									<span>
-										<img src="img/opper_logo2.png" />
+										<img src="img/opper_logo2.jpg" />
 									</span>
 									<span>
-										<img src="img/opper_logo3.png" />
+										<img src="img/opper_logo3.jpg" />
 									</span>
 									<span>
-										<img src="img/opper_logo4.png" />
+										<img src="img/opper_logo4.jpg" />
 									</span>
 									<span>
-										<img src="img/opper_logo5.png" />
+										<img src="img/opper_logo5.jpg" />
 									</span>
 									<span>
-										<img src="img/opper_logo6.png" />
+										<img src="img/opper_logo6.jpg" />
 									</span>
 									<span>
-										<img src="img/opper_logo7.png" />
+										<img src="img/opper_logo7.jpg" />
 									</span>
 									<span>
-										<img src="img/opper_logo8.png" />
+										<img src="img/opper_logo8.jpg" />
 									</span>
 									<span>
-										<img src="img/opper_logo9.png" />
+										<img src="img/opper_logo9.jpg" />
 									</span>
 								</div>
 							</div>
@@ -294,18 +294,18 @@
 					<div class="footer-2">
 						<h4>业务范畴</h4>
 						<p>
-							移动APP产品开发、移动应用产品开发、移动电子商务平台、微信类应用、O2O电子商务平台等	
+							家具的销售、家具的保养、家具的定制化设计、家具的设计咨询、网络方面家具销售服务等	
 						</p>
 					</div>
 					<div class="footer-3">
 						<h4>联系我们</h4>
 						<p>
-	             			 深圳昊特信息技术有限公司
+	             			XXXX有限公司
 	              			<br />
-	              			广州市海珠区琶洲大道东一号保利国际广场南塔29楼
+	              			XX市XX区XXXXX
 				  			<br />
-	             			 电话 ： <br />
-	    	  				Copyright © 深圳昊特信息技术有限公司
+	             			  电话 ： XXXXXXXX<br />
+	    	  				Copyright © XXXX有限公司
 						</p>		
 					</div>
 				</div>
@@ -353,6 +353,7 @@
 			var mySwiper = new Swiper ('.swiper-container', {
 			    direction: 'horizontal',
 			    loop: true,
+			    autoplay:3000,
 			    speed:50
 			 });    
 			 btnPre.onclick = function(){
