--- a/mobilemark.html
+++ b/mobilemark.html
@@ -35,7 +35,7 @@
 								<a href="o2o.html">O2O电商</a>
 							</li>
 							<li class="d-l-ex">
-								<a href="oracle.html">Oracle咨询</a>
+								<a href="dis.html">家具设计咨询</a>
 							</li>
 						</ul>
 					</li>
@@ -77,17 +77,17 @@
 						<img src="img/dz.png" />
 					</div>
 					<div class="bi-b-p1">
-						<h2>定制化的企业需求</h2>
+						<h2>定制化的家具需求</h2>
 						<p>
-							定制化服务是一种高水平的劳动。它需要有更高的素质，更丰富的专业知识。国内大型企业正以一种前所未有的热情来进行信息化建设，希望借此提高企业管理效率，而引进高效的移动化软件是企业进行信息化建设的重要环节。与小企业相比，大中型企业的计算机软、硬件人员已具备了一定的技术基础和实施经验，也有独立的负责企业信息化建设的部门，同时他们对信息化工具的要求也更高，这点也反映在他们对移动化软件的选择上。
+							定制化服务是一种高水平的劳动。它需要有更高的素质，更丰富的专业知识。面对市民对新家具，对概念家具等新的追求，因此这定制化服务必须时刻关注着新信息，新动态。
 						</p>
 					</div>
 				</div>
 				<div class="mo-bi-box2">
 					<div class="bi-b-p2">
-						<h2>定制化的解决方案</h2>
+						<h2>定制化的家具的解决方案</h2>
 						<p>
-							中国大型企业的资金基础、技术基础、管理基础比较好，企业的信息化建设也始终处于中国企业的前沿，与小企业相比，大中型企业对于移动化软件的选择更趋于理智。大型企业对企业移动化的要求较高，因为大型企业组织机构复杂、用户众多、流程复杂;各类应用软件系统负载大，数据量大，最重要的是，大中型企业有着更高的建设目标，他们希望通过实施移动化系统来提升管理水平，提高协作效率，期待实现一个可以不断扩展应用的信息化平台。
+							利用网络手段，大规模的利用线上线下的模式手机市民的新家具的各种相关想法或者信息，并且借助公司开展的家具设计咨询服务来收集数据，研究可能的新家具发展方向。
 						</p>
 					</div>
 					<div class="bi-b-img2">
@@ -116,18 +116,18 @@
 					<div class="footer-2">
 						<h4>业务范畴</h4>
 						<p>
-							移动APP产品开发、移动应用产品开发、移动电子商务平台、微信类应用、O2O电子商务平台等	
+							家具的销售、家具的保养、家具的定制化设计、家具的设计咨询、网络方面家具销售服务等	
 						</p>
 					</div>
 					<div class="footer-3">
 						<h4>联系我们</h4>
 						<p>
-	             			 深圳昊特信息技术有限公司
+	             			XXXX有限公司
 	              			<br />
-	              			广州市海珠区琶洲大道东一号保利国际广场南塔29楼
+	              			XX市XX区XXXXX
 				  			<br />
-	             			 电话 ： <br />
-	    	  				Copyright © 深圳昊特信息技术有限公司
+	             			  电话 ： XXXXXXXX<br />
+	    	  				Copyright © XXXX有限公司
 						</p>		
 					</div>
 				</div>
