--- a/network.html
+++ b/network.html
@@ -34,7 +34,7 @@
 								<a href="o2o.html">O2O电商</a>
 							</li>
 							<li class="d-l-ex">
-								<a href="oracle.html">Oracle咨询</a>
+								<a href="dis.html">家具设计咨询</a>
 							</li>
 						</ul>
 					</li>
@@ -84,25 +84,26 @@
 			</div>
 			<div class="network-main">
 				<div class="net-m-img">
-					<img src="img/MobileBg2.png" />
+					<img src="img/MobileBg2.jpg" />
 				</div>
 				<div class="net-m-p">
 					<h3>独特优势</h3>
 					<p>
-						共同讨论信息化的机遇与挑战，将“合作、发展、共赢”定义为我们长久信守的承诺。
+						利用互联网的力量，整合家具的发展、类型等信息
 					</p>
 					<h4>资源</h4>
 					<table>
 						<tr>
-                			<td>移动应用</td><td></td>
-                			<td>简单易用</td>
+                			<td>移动应用客户端</td><td></td>
+                			<td>增加公司的销售与收集信息渠道</td>
               			</tr>
               			<tr>
-               				<td>平台开发</td><td></td>
-                			<td>基于天猫、京东开放服务，为ISV提供可适用API接口</td>
+               				<td>家具设计</td><td></td>
+                			<td>基于网上客户的需求，为期提供家具设计</td>
               			</tr>
               			<tr>
-                			<td>企业管理&nbsp;&nbsp;&nbsp;</td><td></td><td>轻松实现检验流程的定制与优化创新。</td>
+                			<td>企业管理&nbsp;&nbsp;&nbsp;</td><td></td>
+                			<td>轻松实现家具的定制与家具的优化创新。</td>
               			</tr>
 					</table>
 				</div>
@@ -114,41 +115,47 @@
 							<a href="javascript:void(0)" onclick="allf()">全部</a>
 						</li>
 						<li>
-							<a href="javascript:void(0)" onclick="appf()">移动APP</a>
+							<a href="javascript:void(0)" onclick="appf()">木制家具</a>
 						</li>
 						<li>
-							<a href="javascript:void(0)" onclick="managementf()">企业管理</a>
+							<a href="javascript:void(0)" onclick="managementf()">金属家具</a>
 						</li>
 						<li>
-							<a href="javascript:void(0)" onclick="supportf()">平台支持</a>
+							<a href="javascript:void(0)" onclick="supportf()">概念家具</a>
 						</li>
 					</ul>
 					<div class="a-box">
-						<div class="app" id="app" >
+						<div class="wood" id="wood" >
 							<div>
-								<img src="img/logo_ioa.png" />
+								<img src="img/wood1.jpg" />
 							</div>
 							<div>
-								<img src="img/logo_BI.png" />
+								<img src="img/wood2.jpg" />
 							</div>
 							<div>
-								<img src="img/logo_approve.png" />
-							</div>
-						</div>
-						<div class="management" id="management">
-							<div>
-								<img src="img/logo_IM.png" />
-							</div>
-							<div>
-								<img src="img/logo_qc.png" />
-							</div>
-							<div>
-								<img src="img/logo_shop.png" />
+								<img src="img/wood3.jpg" />
 							</div>
 						</div>
-						<div class="support" id="support">
+						<div class="metal" id="metal">
 							<div>
-								<img src="img/logo_entrance.png" />
+								<img src="img/metal1.jpg" />
+							</div>
+							<div>
+								<img src="img/metal2.jpg" />
+							</div>
+							<div>
+								<img src="img/metal3.jpg" />
+							</div>
+						</div>
+						<div class="fantasy" id="fantasy">
+							<div>
+								<img src="img/fantasy1.jpg" />
+							</div>
+							<div>
+								<img src="img/fantasy2.jpg" />
+							</div>
+							<div>
+								<img src="img/fantasy3.jpg" />
 							</div>
 						</div>
 					</div>
@@ -175,18 +182,18 @@
 					<div class="footer-2">
 						<h4>业务范畴</h4>
 						<p>
-							移动APP产品开发、移动应用产品开发、移动电子商务平台、微信类应用、O2O电子商务平台等	
+							家具的销售、家具的保养、家具的定制化设计、家具的设计咨询、网络方面家具销售服务等	
 						</p>
 					</div>
 					<div class="footer-3">
 						<h4>联系我们</h4>
 						<p>
-	             			 深圳昊特信息技术有限公司
+	             			XXXX有限公司
 	              			<br />
-	              			广州市海珠区琶洲大道东一号保利国际广场南塔29楼
+	              			XX市XX区XXXXX
 				  			<br />
-	             			 电话 ： <br />
-	    	  				Copyright © 深圳昊特信息技术有限公司
+	             			  电话 ： XXXXXXXX<br />
+	    	  				Copyright © XXXX有限公司
 						</p>		
 					</div>
 				</div>
@@ -194,9 +201,9 @@
 		<script type="text/javascript" src="js/swiper-3.3.1.min.js" ></script>
 		<script type="text/javascript" src="js/down-list.js" ></script>
 		<script type="text/javascript">
-			var app = document.getElementById("app");
-			var management = document.getElementById("management");
-			var support = document.getElementById("support");
+			var app = document.getElementById("wood");
+			var management = document.getElementById("metal");
+			var support = document.getElementById("fantasy");
 			function hiddenAll() {
 				app.style.display = "none";
 				management.style.display = "none";
