--- a/work.html
+++ b/work.html
@@ -36,7 +36,7 @@
 								<a href="o2o.html">O2O电商</a>
 							</li>
 							<li class="d-l-ex">
-								<a href="oracle.html">Oracle咨询</a>
+								<a href="dis.html">家具设计咨询</a>
 							</li>
 						</ul>
 					</li>
@@ -83,8 +83,8 @@
 							安全/周期短
 						</h4>
 						<p>
-							提供更高的企业级安全<br />
-							部署周期更短
+							提供更高家具安全<br />
+							家具设计周期更短
 						</p>
 					</div>
 					<div>
@@ -95,8 +95,8 @@
 							理解业务
 						</h4>
 						<p>
-							更好地实现业务价值<br />
-							完整集合与集成现有IT系统与资产
+							更好的实现业务价值<br />
+							完整集合与集成现有家具信息
 						</p>
 					</div>
 					<div>
@@ -108,7 +108,7 @@
 						</h4>
 						<p>
 							体系化的平台架构<br />
-							清晰可部署的移动化战略
+							清晰可部署的家具移动化战略
 						</p>
 					</div>
 				</div>
@@ -195,18 +195,18 @@
 					<div class="footer-2">
 						<h4>业务范畴</h4>
 						<p>
-							移动APP产品开发、移动应用产品开发、移动电子商务平台、微信类应用、O2O电子商务平台等	
+							家具的销售、家具的保养、家具的定制化设计、家具的设计咨询、网络方面家具销售服务等	
 						</p>
 					</div>
 					<div class="footer-3">
 						<h4>联系我们</h4>
 						<p>
-	             			 深圳昊特信息技术有限公司
+	             			XXXX有限公司
 	              			<br />
-	              			广州市海珠区琶洲大道东一号保利国际广场南塔29楼
+	              			XX市XX区XXXXX
 				  			<br />
-	             			 电话 ： <br />
-	    	  				Copyright © 深圳昊特信息技术有限公司
+	             			  电话 ： XXXXXXXX<br />
+	    	  				Copyright © XXXX有限公司
 						</p>		
 					</div>
 				</div>
