Signed-off-by: ZXA123456 <1024733434@qq.com>

--- a/about.html
+++ b/about.html
@@ -114,7 +114,7 @@
 						<div class="r-b-p3">
 							<h3>启航，招纳贤才！</h3>
 							<p>
-								想成为一名真正的移动化专家么？想成为未来的管理精英么？ 也许，这正是你要找的： 这里有一群企业移动化发烧友，专注于为企业搭建移动化平台，部署移动化应用； 大量移动化实战项目，在项目中快速提高自己； 我们是一家有追求、有行动、有快乐、有思想的移动互联网公司！ 不要犹豫，赶紧来加入我们吧！
+								想成为一名真正的家具设计专家么？想成为未来的家具销售精英么？ 也许，这正是你要找的： 这里有一群对家具充满热情的人，专注于为家具的销售和发展，我们是一家有追求、有行动、有快乐、有思想的家具公司！ 不要犹豫，赶紧来加入我们吧！
 							</p>
 						</div>
 						<div class="r-b-img3">
